PDF: React to doc links on mouse up instead of mouse down.

This is more consistent with the behavior for web links.

BUG=720179

Review-Url: https://codereview.chromium.org/2870303002
Cr-Commit-Position: refs/heads/master@{#470582}